fix: Use a monospace font so versionnumber aligns

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -94,3 +94,7 @@ pre {
   word-break: normal;
   word-wrap: break-word;
 }
+
+.version-font {
+  font-family: "Lucida Console", Monaco, monospace;
+}
